# progenitor

./: .buildinfo  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js  todo_finder.py
.clerk/: photon-platform-progenitor_docs.md  photon-platform-progenitor_src.md  photon-platform-progenitor_tree.txt
.github/workflows/: action.yml
_sources/: index.rst.txt
_sources/log/24.125-164141/: index.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
demos/: index.html
demos/demo/: index.html
docsrc/: conf.py
docsrc/modules/: index.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
log/2024/: index.html
log/24.125-164141/: index.html
log/24.126-084330/: index.html
log/24.126-084512/: index.html
log/archive/: index.html
log/category/: index.html
log/category/status/: index.html
log/drafts/: index.html
log/tag/: index.html
log/tag/intro/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
search/: index.html
src/photon_platform/: create_py_project.py  create_py_project_yaml.py
src/photon_platform/progenitor/: __init__.py  __main__.py  app.py  blueprint.yaml  folders.py  git_init.py  progenitor.py  templates.yaml
src/photon_platform/progenitor/repo_test/: README.rst  pyproject.toml
src/photon_platform/progenitor/repo_test/.github/workflows/: action.yml
src/photon_platform/progenitor/repo_test/docsrc/: conf.py  index.rst  intro.rst
src/photon_platform/progenitor/repo_test/docsrc/modules/: index.rst
src/photon_platform/progenitor/repo_test/src/test/repo_test/: __init__.py  app.py  repo_test.py
src/photon_platform/progenitor/templates/: CHANGELOG.rst.j2  README.rst  README.rst.j2  action.yml.j2  pyproject.toml.j2
src/photon_platform/progenitor/templates/docsrc/: about.rst.j2  conf.py.j2  index.rst.j2  intro.rst.j2  (+2 more)
src/photon_platform/templates/: LICENSE.j2  action.yml.j2  conf.py.j2  index.rst.j2  pyproject.toml.j2  pyproject.toml.j2.x
todos/: index.html
usage/: index.html
(+6 files in other folders)
