[project]
name = "photon-platform-progenitor"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "Sparks life into Python projects"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "toml",
    "click",
    "textual",
    "rich",
    "trogon",
    "jinja2",
]

[project.scripts]
progenitor = "photon_platform.progenitor.app:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon_platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon_platform.progenitor.__version__"}

[project.urls]
"Homepage" = "https://github.com/photon-platform/progenitor"
"Bug Tracker" = "https://github.com/photon-platform/progenitor/issues"
