[project]
name = "test-repo_test"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
repo_test = "test.repo_test.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["test"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "test.repo_test.__version__"}

[project.urls]
"Website" = "https://test.github.io/repo_test"
"Repository" = "https://github.com/test/repo_test"
"Issues" = "https://github.com/test/repo_test/issues"